# Encryptor

./: Application.cpp  Application.h  CMakeLists.txt  Logger.h  MakeString.h  README  Settings.h  Singleton.h  main.cpp
